--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -155,6 +155,7 @@ a {
 /*For medium screens; this works*/
 @media only screen and (max-width: 1024px) {
   .container {
+    max-width: 100%;
     margin: 0;
   }
   .product {
